syntax = "proto3";

import "google/protobuf/timestamp.proto";

package blaedj.scriptum.proto;
option go_package = "scriptumproto";

service ScriptumService  {
  rpc NewDocument(Document) returns (NewDocumentResponse);
  rpc SaveDocument(Document) returns (SaveDocumentResponse);
  rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse);
}

message Document {
  string title                       = 1;
  string contents                    = 2;
  string id                          = 3; // should be a ULID value (see github.com/ulid)
  google.protobuf.Timestamp saved_at = 4;
  string owner_id                    = 5; // should be a ULID value (see github.com/ulid)
}

message NewDocumentResponse {
  string err = 1;
  string document_id = 2;
}

message SaveDocumentResponse {
  string err = 1;
}

message DeleteDocumentRequest {
  string document_id = 1;
}

message DeleteDocumentResponse {
  string err = 1;
}

